find_*(): Add CMAKE_IGNORE_PREFIX_PATH variable

Fixes: #20878